<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DisTetris</string>
    
    <string name="catIndividual">INDIVIDUAL</string>
    <string name="catTeam">TEAM</string>
    
    <string name="newServername">Server name</string>
    <string name="newServernameDefault">Wifi</string>
    <string name="newNumTeams">Number of teams</string>
    <string name="newNumTeamsDefault">3</string>
    <string name="newNumPlayers">Number of players</string>
    <string name="newNumPlayersDefault">6</string>
    <string name="newNumTurns">Number of turns</string>
    <string name="newNumTurnsDefault">5</string>
    
    <string name="confPlayername">Player Name</string>
    
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
</resources>
