<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="10sp"
	android:gravity="bottom"
    android:background="@drawable/background" >

    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent" >
	    <TextView
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
	    	android:gravity="center"
		    android:padding="10sp"
		    android:textColor="#111"
		    android:text="@string/confPlayername" />
	   	<EditText
			android:id="@+id/PlayerName"
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent" />
    </LinearLayout>

	<Button
		android:id="@+id/Save"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:text="@string/save" />

	<Button
		android:id="@+id/Back"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center"
	    android:text="@string/back" />
</LinearLayout>
